--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -52,3 +52,7 @@ $cardWidthDesktop: 370px;
 
 $thumbDiameterMobileTablet: 200px;
 $thumbDiameterDesktop: 302px;
+
+$colorGreen: #aec6a5;
+$colorYellow: #efd478;
+$colorChocolate: #d6936d;
