--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -71,6 +71,7 @@
                 name="user-name"
                 id="user-name"
                 placeholder="Name"
+                pattern="[A-Z]{1}+[a-z]{3, 20}"
               />
             </div>
           </li>
@@ -95,7 +96,7 @@
                 name="comment"
                 id="user-comment"
                 placeholder="Comment"
-              />
+              ></textarea>
             </div>
           </li>
         </ul>
