--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -550,22 +550,22 @@ footer {
   color: #131313;
 }
 .modal__form-input::-moz-placeholder {
+  font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  line-height: 1.4166666667;
+  color: #131313;
 }
 .modal__form-input:-ms-input-placeholder {
+  font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  line-height: 1.4166666667;
+  color: #131313;
 }
 .modal__form-input::placeholder {
+  font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  line-height: 1.4166666667;
+  color: #131313;
 }
 .modal .comment {
   height: 65px;
