--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -228,25 +228,17 @@
     color: $secondaryColor;
 
     &::placeholder {
+      font-weight: 400;
       font-size: 12px;
-      line-height: 14px;
-      letter-spacing: 0.01em;
+      line-height: calc(17 / 12);
 
-      color: rgba(117, 117, 117, 0.5);
+      color: $secondaryColor;
     }
   }
 
   .comment {
     height: 65px;
     resize: none;
-
-    // &::placeholder {
-    //   font-size: 12px;
-    //   line-height: 14px;
-    //   letter-spacing: 0.01em;
-
-    //   color: rgba(117, 117, 117, 0.5);
-    // }
   }
 
   &__form-field:focus-within &__form-input {
