--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -71,7 +71,9 @@
                 name="user-name"
                 id="user-name"
                 placeholder="Name"
-                pattern="[A-Z]{1}+[a-z]{3, 20}"
+                pattern="[A-Za-z]{1,4}"
+                title="Name must not exceed 4 characters"
+                required
               />
             </div>
           </li>
@@ -84,6 +86,7 @@
                 name="user-phone"
                 id="user-phone"
                 placeholder="Phone"
+                required
               />
             </div>
           </li>
