--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -93,3 +93,30 @@
     color: $mainColor;
   }
 }
+
+// Submit buttons
+
+.submit-btn {
+  width: 114px;
+  height: 42px;
+
+  font-weight: 600;
+  font-size: 12px;
+  line-height: calc(15 / 12);
+  text-align: center;
+
+  color: $secondaryColor;
+  background-color: $mainAccentColor;
+  border: none;
+  border-radius: 10px;
+
+  &:hover {
+    background-color: $secondaryAccentColor;
+  }
+
+  &:focus {
+    color: $mainColor;
+    background-color: $secondaryAccentColor;
+    outline: none;
+  }
+}
