--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -2,7 +2,7 @@
 <!-- BUY NOW -->
 <div class="backdrop is-hidden">
   <div class="modal">
-    <div class="modal__container">
+    <div class="modal__container modal__container-buy-now">
       <!-- Close button -->
       <button class="btn modal__close-btn">
         <svg class="modal__close-icon" width="20" height="20">
@@ -10,7 +10,7 @@
         </svg>
       </button>
       <!-- Title -->
-      <p class="modal__title">Buy now</p>
+      <p class="modal__title modal__title-products">Buy now</p>
       <!-- Form -->
       <form class="modal__form">
         <!-- Check-boxes -->
