--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -50,7 +50,7 @@
   text-decoration: none;
 }
 
-.products__arrow, .mobile-menu-close, .mobile-menu-open, .modal__close-btn {
+.modal__close-btn, .products__arrow, .mobile-menu-close, .mobile-menu-open {
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -108,7 +108,7 @@
   }
 }
 
-.modal__product-circle--chocolate::before, .modal__product-circle--yellow::before, .modal__product-circle--green::before {
+.modal__circle-ingredients--green::before, .modal__product-circle--chocolate::before, .modal__product-circle--yellow::before, .modal__product-circle--green::before {
   content: "";
   position: absolute;
   top: -7px;
@@ -346,6 +346,34 @@ footer {
   color: #fcfcfc;
 }
 
+.submit-btn {
+  width: 114px;
+  height: 42px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  text-align: center;
+  color: #131313;
+  background-color: #f8d24e;
+  border: none;
+  border-radius: 10px;
+}
+@media screen and (min-width: 768px) {
+  .submit-btn {
+    width: 121px;
+    font-size: 14px;
+    line-height: 0.0714285714;
+  }
+}
+.submit-btn:hover {
+  background-color: #0a8817;
+}
+.submit-btn:focus {
+  color: #fcfcfc;
+  background-color: #0a8817;
+  outline: none;
+}
+
 /* Visually hidden elements */
 .visually-hidden {
   position: absolute;
@@ -381,198 +409,6 @@ footer {
 .logo-img {
   width: 100%;
   height: 100%;
-}
-
-/*=== MODAL WINDOWS ===*/
-/* Modal window Buy now */
-.modal {
-  margin: 0 auto;
-  width: 280px;
-  background-color: #ffffff;
-  outline: 1px solid crimson;
-}
-.modal__container {
-  position: relative;
-  padding: 28px 28px 29px;
-}
-.modal__close-btn {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-}
-.modal__close-icon {
-  fill: #131313;
-  transition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__close-btn:hover .modal__close-icon, .modal__close-btn:focus .modal__close-icon {
-  fill: #0a8817;
-}
-.modal__title {
-  margin-bottom: 83px;
-  font-family: "Seymour One", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  text-align: center;
-  color: #131313;
-}
-.modal__form-checkbox-list {
-  margin-bottom: 32px;
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-items: center;
-  grid-auto-rows: minmax(136px, auto);
-  row-gap: 82px;
-}
-.modal__product-item {
-  position: relative;
-  padding: 96px 10px 20px;
-  width: 132px;
-  border-radius: 15px;
-  border: 2px solid transparent;
-  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
-}
-@media screen and (min-width: 768px) {
-  .modal__product-item {
-    padding: 95px 13px 20px;
-  }
-}
-.modal__product-item--green, .modal__product-item--yellow, .modal__product-item--chocolate {
-  background-color: transparent;
-  transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__product-item--green {
-  border-color: #aec6a5;
-}
-.modal__product-item--green:hover {
-  background-color: #aec6a5;
-}
-.modal__product-item--yellow {
-  border-color: #efd478;
-}
-.modal__product-item--yellow:hover {
-  background-color: #efd478;
-}
-.modal__product-item--chocolate {
-  border-color: #d6936d;
-}
-.modal__product-item--chocolate:hover {
-  background-color: #d6936d;
-}
-.modal__product-checkbox {
-  display: none;
-}
-.ice-cream:checked + .modal__product-item {
-  background-color: #aec6a5;
-}
-.ice-coffee:checked + .modal__product-item {
-  background-color: #efd478;
-}
-.milkshake:checked + .modal__product-item {
-  background-color: #d6936d;
-}
-.modal__product-circle {
-  position: absolute;
-  top: -66px;
-  left: -2px;
-  z-index: 2;
-  width: 132px;
-  height: 132px;
-  border-radius: 50%;
-}
-.modal__product-circle--green {
-  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
-  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
-}
-.modal__product-circle--green::before {
-  background-image: url(../images/products/png/product-modal1-132.png);
-}
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .modal__product-circle--green::before {
-    background-image: url(../images/products/png/product-modal1-@2x-264.png);
-  }
-}
-.modal__product-circle--yellow {
-  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
-  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
-}
-.modal__product-circle--yellow::before {
-  background-image: url(../images/products/png/product-modal2-132.png);
-}
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .modal__product-circle--yellow::before {
-    background-image: url(../images/products/png/product-modal2-@2x-264.png);
-  }
-}
-.modal__product-circle--chocolate {
-  background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
-  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
-}
-.modal__product-circle--chocolate::before {
-  background-image: url(../images/products/png/product-modal3-132.png);
-}
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .modal__product-circle--chocolate::before {
-    background-image: url(../images/products/png/product-modal3-@2x-264.png);
-  }
-}
-.modal__product-name {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.25;
-  text-align: center;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #131313;
-}
-.modal__form-input-list {
-  margin-bottom: 26px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.modal__form-input-item:not(:last-child) {
-  margin-bottom: 12px;
-}
-.modal__form-input {
-  padding: 8px 12px;
-  width: 224px;
-  height: 32px;
-  background: rgba(248, 210, 78, 0.1);
-  border: 1px solid #84a178;
-  border-radius: 10px;
-}
-.modal__form-input {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.4166666667;
-  color: #131313;
-}
-.modal__form-input::-moz-placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.4166666667;
-  color: #131313;
-}
-.modal__form-input:-ms-input-placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.4166666667;
-  color: #131313;
-}
-.modal__form-input::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.4166666667;
-  color: #131313;
-}
-.modal .comment {
-  height: 65px;
-  resize: none;
-}
-.modal__form-field:focus-within .modal__form-input {
-  outline: none;
 }
 
 /* === HEADER === */
@@ -2252,4 +2088,387 @@ footer {
   .footer__rights:not(:last-child) {
     margin-right: 4px;
   }
+}
+
+/* === COMMON STYLES FOR MODAL WINDOWS === */
+/* === COMMON STYLES OF MODAL WINDOWS === */
+.modal {
+  margin: 0 auto;
+  width: 280px;
+  background-color: #ffffff;
+  outline: 1px solid crimson;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 568px;
+  }
+}
+.modal__container {
+  position: relative;
+}
+.modal__close-btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+.modal__close-icon {
+  fill: #131313;
+  transition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .modal__close-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+.modal__close-btn:hover .modal__close-icon, .modal__close-btn:focus .modal__close-icon {
+  fill: #0a8817;
+}
+.modal__title {
+  font-family: "Seymour One", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  color: #131313;
+}
+@media screen and (min-width: 768px) {
+  .modal__title {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+}
+
+/*=== MODAL WINDOWS ===*/
+/* Modal window Buy now */
+.modal__container-buy-now {
+  padding: 28px 28px 29px;
+}
+@media screen and (min-width: 768px) {
+  .modal__container-buy-now {
+    padding: 32px 54px;
+  }
+}
+.modal__title-products {
+  margin-bottom: 83px;
+}
+@media screen and (min-width: 768px) {
+  .modal__title-products {
+    margin-bottom: 103px;
+  }
+}
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal__form-checkbox-list {
+  display: grid;
+  justify-items: center;
+}
+@media screen and (max-width: 767px) {
+  .modal__form-checkbox-list {
+    margin-bottom: 32px;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(136px, auto);
+    row-gap: 82px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal__form-checkbox-list {
+    margin-bottom: 40px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(135px, auto);
+    -moz-column-gap: 32px;
+         column-gap: 32px;
+  }
+}
+.modal__product-item {
+  position: relative;
+  padding: 96px 10px 20px;
+  width: 132px;
+  border-radius: 15px;
+  border: 2px solid transparent;
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+}
+@media screen and (min-width: 768px) {
+  .modal__product-item {
+    padding: 95px 10px 20px;
+  }
+}
+.modal__product-item--green, .modal__product-item--yellow, .modal__product-item--chocolate {
+  background-color: transparent;
+  transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__product-item--green {
+  border-color: #aec6a5;
+}
+.modal__product-item--green:hover {
+  background-color: #aec6a5;
+}
+.modal__product-item--yellow {
+  border-color: #efd478;
+}
+.modal__product-item--yellow:hover {
+  background-color: #efd478;
+}
+.modal__product-item--chocolate {
+  border-color: #d6936d;
+}
+.modal__product-item--chocolate:hover {
+  background-color: #d6936d;
+}
+.modal__product-checkbox {
+  display: none;
+}
+.ice-cream:checked + .modal__product-item {
+  background-color: #aec6a5;
+}
+.ice-coffee:checked + .modal__product-item {
+  background-color: #efd478;
+}
+.milkshake:checked + .modal__product-item {
+  background-color: #d6936d;
+}
+.modal__product-circle {
+  position: absolute;
+  top: -66px;
+  left: -2px;
+  z-index: 2;
+  width: 132px;
+  height: 132px;
+  border-radius: 50%;
+}
+.modal__product-circle--green {
+  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+}
+.modal__product-circle--green::before {
+  background-image: url(../images/products/png/product-modal1-132.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .modal__product-circle--green::before {
+    background-image: url(../images/products/png/product-modal1-@2x-264.png);
+  }
+}
+.modal__product-circle--yellow {
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+}
+.modal__product-circle--yellow::before {
+  background-image: url(../images/products/png/product-modal2-132.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .modal__product-circle--yellow::before {
+    background-image: url(../images/products/png/product-modal2-@2x-264.png);
+  }
+}
+.modal__product-circle--chocolate {
+  background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+}
+.modal__product-circle--chocolate::before {
+  background-image: url(../images/products/png/product-modal3-132.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .modal__product-circle--chocolate::before {
+    background-image: url(../images/products/png/product-modal3-@2x-264.png);
+  }
+}
+.modal__product-name {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
+}
+.modal__form-input-list {
+  margin-bottom: 26px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .modal__form-input-list {
+    margin-bottom: 32px;
+  }
+}
+.modal__form-input-item:not(:last-child) {
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .modal__form-input-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+.modal__form-input {
+  padding: 8px 12px;
+  width: 224px;
+  height: 32px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4166666667;
+  color: #131313;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84a178;
+  border-radius: 10px;
+}
+@media screen and (min-width: 768px) {
+  .modal__form-input {
+    padding: 11px 16px;
+    width: 368px;
+    height: 42px;
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+}
+.modal__form-input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4166666667;
+  color: #131313;
+}
+.modal__form-input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4166666667;
+  color: #131313;
+}
+.modal__form-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4166666667;
+  color: #131313;
+}
+@media screen and (min-width: 768px) {
+  .modal__form-input::-moz-placeholder {
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+  .modal__form-input:-ms-input-placeholder {
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+  .modal__form-input::placeholder {
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+}
+.modal__form-input:not(:-moz-placeholder-shown):invalid {
+  border-color: crimson;
+}
+.modal__form-input:not(:-ms-input-placeholder):invalid {
+  border-color: crimson;
+}
+.modal__form-input:not(:placeholder-shown):invalid {
+  border-color: crimson;
+}
+.modal .comment {
+  height: 65px;
+  resize: none;
+}
+@media screen and (min-width: 768px) {
+  .modal .comment {
+    height: 84px;
+  }
+}
+.modal__form-field:focus-within .modal__form-input {
+  border-color: #f8d24e;
+  outline: none;
+}
+
+/* === MODAL WINDOW INGREDIENTS === */
+.modal__container-ingredients {
+  padding: 28px 28px 29px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .modal__container-ingredients {
+    padding: 32px 54px;
+  }
+}
+.modal__title-ingredients {
+  font-size: 20px;
+  line-height: 1.4;
+}
+@media screen and (max-width: 767px) {
+  .modal__title-ingredients {
+    margin-bottom: 27px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal__title-ingredients {
+    margin-bottom: 31px;
+  }
+}
+.modal__circle-ingredients {
+  position: relative;
+  margin-bottom: 22px;
+  width: 132px;
+  height: 132px;
+  border-radius: 50%;
+}
+.modal__circle-ingredients--green {
+  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+}
+.modal__circle-ingredients--green::before {
+  top: -7px;
+  background-image: url(../images/products/png/product-modal1-132.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .modal__circle-ingredients--green::before {
+    background-image: url(../images/products/png/product-modal1-@2x-264.png);
+  }
+}
+
+.modal-elements__list {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(72px, auto);
+  -moz-column-gap: 9px;
+       column-gap: 9px;
+}
+.modal-elements__item {
+  position: relative;
+}
+.modal-elements__name {
+  padding-bottom: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 53px;
+  height: 72px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.2;
+  text-align: center;
+  color: #131313;
+  border: 2px solid #9cbe8f;
+  border-radius: 40px;
+}
+.modal-elements__quantity {
+  position: absolute;
+  top: 0;
+  left: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 43px;
+  height: 43px;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 2.8;
+  border-radius: 50%;
+  border: 2px solid #9cbe8f;
+  color: #131313;
+  background: #9cbe8f;
+  box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
 }/*# sourceMappingURL=index.css.map */
