--- a/src/sass/layout/modals/_modal-buy-now.scss
+++ b/src/sass/layout/modals/_modal-buy-now.scss
@@ -1,47 +1,69 @@
 /*=== MODAL WINDOWS ===*/
 /* Modal window Buy now */
 .modal {
-  margin: 0 auto;
-  width: 280px;
-  background-color: $phoneContactColor;
-  outline: 1px solid crimson;
+  // // Common
+  // margin: 0 auto;
+  // width: 280px;
+  // background-color: $phoneContactColor;
+  // outline: 1px solid crimson;
 
-  &__container {
-    position: relative;
+  // @include tablet-and-desktop {
+  //   width: 568px;
+  // }
 
+  &__container-buy-now {
     padding: 28px 28px 29px;
-  }
 
-  &__close-btn {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-
-    @extend %btn-icons;
+    @include tablet-and-desktop {
+      padding: 32px 54px;
+    }
   }
+  // common
+  // &__close-btn {
+  //   position: absolute;
+  //   top: 12px;
+  //   right: 12px;
 
-  &__close-icon {
-    fill: $secondaryColor;
-    transition: $myFillTransition;
-  }
+  //   @extend %btn-icons;
 
-  &__close-btn:hover &__close-icon,
-  &__close-btn:focus &__close-icon {
-    fill: $secondaryAccentColor;
-  }
+  //   @include tablet-and-desktop {
+  //   }
+  // }
+
+  // &__close-icon {
+  //   fill: $secondaryColor;
+  //   transition: $myFillTransition;
+
+  //   @include tablet-and-desktop {
+  //     width: 24px;
+  //     height: 24px;
+  //   }
+  // }
+
+  // &__close-btn:hover &__close-icon,
+  // &__close-btn:focus &__close-icon {
+  //   fill: $secondaryAccentColor;
+  // }
 
   // Form title
 
-  &__title {
+  &__title-products {
     margin-bottom: 83px;
 
-    font-family: $secondaryFont;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: calc(24 / 16);
-    text-align: center;
+    // font-family: $secondaryFont;
+    // font-weight: 400;
+    // font-size: 16px;
+    // line-height: calc(24 / 16);
+    // text-align: center;
 
-    color: $secondaryColor;
+    // color: $secondaryColor;
+
+    @include tablet-and-desktop {
+      margin-bottom: 103px;
+
+      // font-size: 20px;
+      // line-height: calc(28 / 20);
+    }
   }
 
   // Form
@@ -55,13 +77,24 @@
   // Product list
 
   &__form-checkbox-list {
-    margin-bottom: 32px;
-
     display: grid;
-    grid-template-columns: 1fr;
     justify-items: center;
-    grid-auto-rows: minmax(136px, auto);
-    row-gap: 82px;
+
+    @include less-then-tablet {
+      margin-bottom: 32px;
+
+      grid-template-columns: 1fr;
+      grid-auto-rows: minmax(136px, auto);
+      row-gap: 82px;
+    }
+
+    @include tablet-and-desktop {
+      margin-bottom: 40px;
+
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: minmax(135px, auto);
+      column-gap: 32px;
+    }
   }
 
   // Cards
@@ -76,7 +109,7 @@
     filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
 
     @include tablet-and-desktop {
-      padding: 95px 13px 20px;
+      padding: 95px 10px 20px;
     }
 
     &--green,
@@ -212,10 +245,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include tablet-and-desktop {
+      margin-bottom: 32px;
+    }
   }
 
   &__form-input-item:not(:last-child) {
     margin-bottom: 12px;
+
+    @include tablet-and-desktop {
+      margin-bottom: 16px;
+    }
   }
 
   &__form-input {
@@ -232,15 +273,29 @@
     border: 1px solid $mainBgColor;
     border-radius: 10px;
 
+    @include tablet-and-desktop {
+      padding: 11px 16px;
+      width: 368px;
+      height: 42px;
+
+      font-size: 14px;
+      line-height: calc(20 / 14);
+    }
+
     &::placeholder {
       font-weight: 400;
       font-size: 12px;
       line-height: calc(17 / 12);
 
       color: $secondaryColor;
+
+      @include tablet-and-desktop {
+        font-size: 14px;
+        line-height: calc(20 / 14);
+      }
     }
 
-    &:invalid {
+    &:not(:placeholder-shown):invalid {
       border-color: crimson;
     }
   }
@@ -248,6 +303,10 @@
   .comment {
     height: 65px;
     resize: none;
+
+    @include tablet-and-desktop {
+      height: 84px;
+    }
   }
 
   &__form-field:focus-within &__form-input {
