--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -37,6 +37,7 @@ $myBgColorTransition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myFillTransition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myTransformTransition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myBoxShadowTransition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+$myOpacityTransition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
 // Container paddings
 
